--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
     "vue-i18n": "^8.15.3",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2",
     "web-storage-cache": "^1.1.1"
