--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,7 @@
 VUE_APP_RES_URL=http://39.97.112.165:8000
-VUE_APP_BASE_URL=http://192.168.31.243:8080
+VUE_APP_EPUB_URL=http://47.99.166.157/epub
+VUE_APP_EPUB_OPF_URL=http://47.99.166.157/epub2
+VUE_APP_RES_URL=http://47.99.166.157/book/res
+VUE_APP_BASE_URL=http://47.99.166.157:3000
+VUE_APP_VOICE_URL=http://47.99.166.157:3000
+VUE_APP_BOOK_URL=http://47.99.166.157:3000
