--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "vue": "^2.6.10",
+    "vue-create-api": "^0.2.3",
     "vue-i18n": "^8.15.3",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
